# terrascope

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  Kconfig  PLAN.md  README.md  SECURITY.md  TUTORIAL.md  prj.conf  west.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
boards/: heltec_wifi_lora32_v2_esp32_procpu.conf  qemu_riscv64.conf  qemu_riscv64.overlay  rak4631.conf  rak4631.overlay  rak4631_nrf52840.overlay
drivers/lora/: Kconfig.mock
dts/bindings/lora/: zephyr,lora-mock.yaml
scripts/: twister_to_html.py
src/: main.c  main.cpp  mainpage.dox  version.h.in
src/config/: config.c  config.h
src/drivers/: lora_mock.c
src/logging/: logging.c  logging.h
src/lora/: LoraDevice.cpp  LoraDevice.h  auth.c  auth.h  cbor.c  cbor.h  contention.c  contention.h  lora.c  lora.h
src/messages/: messages.h
src/node_status/: node_status.h
src/routing/: routing.c  routing.h  routing_table.c  routing_table.h
src/sensors/: sensor_backend.h  sensor_bme280.c  sensor_manager.c  sensor_manager.cpp  sensor_manager.h  sensor_manager.hpp  sensor_mock.c
tests/auth/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/auth/src/: main.c
tests/cbor/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cbor/src/: main.c
tests/config/: CMakeLists.txt  prj.conf  testcase.yaml
tests/config/boards/: qemu_riscv64_qemu_virt_riscv64.overlay
tests/config/src/: main.c
tests/contention/: CMakeLists.txt  prj.conf  testcase.yaml
tests/contention/src/: main.c
tests/routing/: CMakeLists.txt  testcase.yaml
tests/routing/src/: main.c
tests/routing_table/: CMakeLists.txt  testcase.yaml
tests/routing_table/src/: main.c
